# playground

./: Cargo.toml  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
programs/inline/cpi/: Cargo.toml
programs/inline/cpi/src/: entrypoint.rs
programs/inline/entrypoint/: Cargo.toml
programs/inline/entrypoint/src/: lib.rs
programs/pinocchio/: Cargo.toml
programs/pinocchio/accounts/: Cargo.toml
programs/pinocchio/accounts/src/: entrypoint.rs
programs/pinocchio/cpi/: Cargo.toml
programs/pinocchio/cpi/src/: entrypoint.rs  lib.rs
programs/pinocchio/cpi1/: Cargo.toml
programs/pinocchio/cpi1/src/: entrypoint.rs
programs/pinocchio/cpi2/: Cargo.toml
programs/pinocchio/cpi2/src/: entrypoint.rs
programs/pinocchio/entrypoint/: Cargo.toml
programs/pinocchio/entrypoint/src/: entrypoint.rs
programs/pinocchio/log/: Cargo.toml
programs/pinocchio/log/src/: entrypoint.rs
programs/pinocchio/rent/: Cargo.toml
programs/pinocchio/rent/src/: entrypoint.rs
programs/pinocchio/src/: entrypoint.rs  lib.rs
programs/pinocchio/token/: Cargo.toml
programs/pinocchio/token/src/: entrypoint.rs
programs/pinocchio/unalignment/: Cargo.toml
programs/pinocchio/unalignment/.cargo/: config.toml
programs/pinocchio/unalignment/src/: lib.rs
programs/sdk/: Cargo.toml
programs/sdk/accounts/: Cargo.toml
programs/sdk/accounts/src/: lib.rs
programs/sdk/cpi/: Cargo.toml
programs/sdk/cpi/src/: entrypoint.rs
programs/sdk/entrypoint/: Cargo.toml
programs/sdk/entrypoint/src/: entrypoint.rs
programs/sdk/log/: Cargo.toml
programs/sdk/log/src/: entrypoint.rs
programs/sdk/rent/: Cargo.toml
programs/sdk/rent/src/: entrypoint.rs
tests/: Cargo.toml
tests/benches/: inline.rs  pinocchio.rs  sdk.rs
tests/benches/setup/: mod.rs
