[package]
name = "playground"
edition = "2021"
publish = false

[[bin]]
name = "playground"
path = "src/main.rs"

[dev-dependencies]
mollusk-svm = "0.10.3"
mollusk-svm-bencher = "0.10.3"
solana-account = "3.1"
solana-bpf-loader-program = "3.1"
solana-instruction = "3.1"
solana-logger = "3.0"
solana-pubkey = "3.0"
solana-rent = "3.1"
