[package]
name = "inline-entrypoint"
version = "0.1.0"
edition = "2021"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("custom-heap", "custom-panic", "frozen-abi", "no-entrypoint"))',
]

[lib]
crate-type = ["cdylib"]

[dependencies]
pinocchio = { workspace = true }
