[package]
name = "pinocchio-token"
version = "0.1.0"
edition = "2021"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]

[lib]
crate-type = ["cdylib"]

[dependencies]
pinocchio = { workspace = true }
pinocchio-token = { workspace = true, features = ["batch"] }
